--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pylink (1.1.0.1-0utopia1ppa1) xenial; urgency=medium
+
+  * PPA build.
+
+ -- James Lu <bitflip3@gmail.com>  Fri, 03 Feb 2017 19:10:14 -0800
+
 pylink (1.1.0.1-0utopia1) unstable; urgency=medium
 
   * New release.
