--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pylink (1.1.1-0utopia1ppa1) xenial; urgency=medium
+
+  * PPA build refresh.
+
+ -- James Lu <bitflip3@gmail.com>  Wed, 01 Mar 2017 14:39:03 -0800
+
 pylink (1.1.1-0utopia1) unstable; urgency=medium
 
   * New release.
