--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pylink (1.1.2-0utopia1) unstable; urgency=medium
+
+  * New release.
+
+ -- James Lu <bitflip3@gmail.com>  Mon, 17 Apr 2017 01:37:14 -0700
+
 pylink (1.1.1-0utopia1) unstable; urgency=medium
 
   * New release.
