--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pylink (1.1.2-0utopia1ppa1) xenial; urgency=medium
+
+  * PPA build refresh.
+
+ -- James Lu <bitflip3@gmail.com>  Tue, 25 Apr 2017 19:03:09 -0700
+
 pylink (1.1.2-0utopia1) unstable; urgency=medium
 
   * New release.
