--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pylink (1.2.0-0utopia1ppa1) artful; urgency=medium
+
+  * PPA build refresh.
+
+ -- James Lu <bitflip3@gmail.com>  Wed, 16 Aug 2017 17:13:15 -0700
+
 pylink (1.2.0-0utopia1) unstable; urgency=medium
 
   * New stable release.
