--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+pylink (1.3~b1-0utopia1) UNRELEASED; urgency=medium
+
+  * New upstream release.
+  * See https://github.com/GLolol/PyLink/blob/master/RELNOTES.md#pylink-13-beta1-2018-04-07
+    for a list of changes.
+  * Update Standards-Version (-> 4.1.4), email, Vcs-* links.
+
+ -- James Lu <james@overdrivenetworks.com>  Mon, 09 Apr 2018 07:28:15 -0700
+
 pylink (1.2.0-0utopia1~bpo9+1) stretch-backports; urgency=medium
 
   * Rebuild for stretch-backports.
