--- a/debian/changelog
+++ b/debian/changelog
@@ -1,7 +1,7 @@
-pylink (1.3~b1-0utopia1) UNRELEASED; urgency=medium
+pylink (1.3.0-0utopia1) UNRELEASED; urgency=medium
 
   * New upstream release.
-  * See https://github.com/GLolol/PyLink/blob/master/RELNOTES.md#pylink-13-beta1-2018-04-07
+  * See https://github.com/jlu5/PyLink/blob/master/RELNOTES.md#pylink-130-2018-05-08
     for a list of changes.
   * Update Standards-Version (-> 4.1.4), email, Vcs-* links.
 
