--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+pylink (2.0~a3-0utopia1) UNRELEASED; urgency=medium
+
+  * New development release.
+
+ -- James Lu <james@overdrivenetworks.com>  Fri, 01 Jun 2018 00:11:16 -0700
+
 pylink (1.3.0-0utopia1) UNRELEASED; urgency=medium
 
   * New upstream release.
